Fix MVP nav overflow

--- a/src/components/MVP/Header/Header.module.scss
+++ b/src/components/MVP/Header/Header.module.scss
@@ -13,6 +13,7 @@
 .joinBeta {
   align-self: flex-start;
   margin-top: units(4);
+  margin-bottom: units(4);
   padding-right: units(2);
 
   button {
@@ -21,6 +22,8 @@
 }
 
 .Header {
+  overflow: auto;
+
   // USWDS OVERRIDES
   &:global(.usa-header) {
     background-color: color($theme-color-base-lightest);
